[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personhood-issue-tracker"
version = "0.1.0"
description = "GitHub Issues + Markdown incident pipeline for Personhood services (SCD, AIF, KMS-facing)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kaede Dev Kento Hinode" }]
dependencies = [
    "PyGithub>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
